fix some errors

--- a/notebooks/vis.ipynb
+++ b/notebooks/vis.ipynb
@@ -2,15 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Fontconfig error: Cannot load default config file\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pylab as plt\n",
     "import datasets\n",
     "import pickle\n",
     "import os\n",
     "from typography_generation.io.crello_util import CrelloProcessor\n",
+    "from typography_generation.io.data_object import FontConfig\n",
     "from typography_generation.tools.denormalizer import Denormalizer\n",
     "from typography_generation.tools.tokenizer import Tokenizer\n",
     "\n",
@@ -26,13 +37,20 @@
     "renderer = TextRenderer(data_dir, fontlabel2fontname)\n",
     "\n",
     "tokenizer = Tokenizer(data_dir)\n",
-    "dataset_processor = CrelloProcessor(data_dir,tokenizer,dataset,None)\n",
+    "font_config = FontConfig(\n",
+    "    261,\n",
+    "    \"label\",\n",
+    "    None,\n",
+    "    None,\n",
+    "    None\n",
+    ")\n",
+    "dataset_processor = CrelloProcessor(data_dir,tokenizer,dataset,font_config)\n",
     "denormalizer = Denormalizer(dataset_processor)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +58,13 @@
     "    fn =f\"{output_dir}/logs/prediction.pkl\"\n",
     "    predictions = pickle.load(open(fn,\"rb\"))\n",
     "    return predictions\n",
-    "output_dir = \"../outs\" # please set your output directory here\n",
+    "output_dir = \"../tmpk\" # please set your output directory here\n",
     "predictions = load_pred(output_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +75,7 @@
     "\n",
     "# This code shows 3 generated designs per input context\n",
     "\n",
-    "num_sample = 10 \n",
+    "num_sample = 3\n",
     "\n",
     "for i in range(num_sample):\n",
     "    i=random.randint(0,len(dataset))\n",
@@ -78,6 +96,7 @@
     "        fig=plt.figure(figsize=(50, 50))\n",
     "        for iter in range(3):\n",
     "            visdata[\"prediction\"]=predictions[f\"{svg_id}_{iter}\"]\n",
+    "            print(visdata[\"prediction\"])\n",
     "            img = visualize_prediction(**visdata).astype(np.uint8)\n",
     "            plt.subplot(1, 3, iter+1)\n",
     "            plt.imshow(img)\n",
@@ -91,6 +110,13 @@
     "    )\n",
     "    #display(PIL.Image.fromarray(img.astype(np.uint8)))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -109,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
