add pretrained model info

--- a/notebooks/vis.ipynb
+++ b/notebooks/vis.ipynb
@@ -58,7 +58,7 @@
     "    fn =f\"{output_dir}/logs/prediction.pkl\"\n",
     "    predictions = pickle.load(open(fn,\"rb\"))\n",
     "    return predictions\n",
-    "output_dir = \"../tmpk\" # please set your output directory here\n",
+    "output_dir = \"../outs\" # please set your output directory here\n",
     "predictions = load_pred(output_dir)"
    ]
   },
